--- a/metadata.yaml
+++ b/metadata.yaml
@@ -27,5 +27,6 @@ subjects:
 - !lcc 'PS'
 - !lcsh 'Punic War, 2nd, 218-201 B.C. -- Fiction'
 - !lcsh 'Historical fiction'
+- GITenberg
 title: The Lion's Brood
 url: http://www.gutenberg.org/ebooks/20219
